Updated FishBowl Submission
Updates

--- a/tc349 Code/css/main.css
+++ b/tc349 Code/css/main.css
@@ -97,8 +97,19 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-h1, p {
+body {
+  background-color: #ecf0f1;
+
+}
+
+h1, p, ul{
   margin: 0;
+  padding: 0;
+
+}
+
+ul {
+    list-style-type: none;
 
 }
 
@@ -118,17 +129,27 @@ text-align: center;
 }
 
 #main-feed {
-  background-color: #ecf0f1;
 
+  padding: 2em;
 
 }
 
 .toggle-button {
 
     display: inline-block;
-    height: 100px;
-    width: 100px;
+    padding: 15px; 20px;
     background: #ccc;
+
+}
+
+#feed li {
+
+  padding: .5em;
+  margin-bottom: 1em;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  background: #fff;
+
 
 }
 
