--- a/Portfolio1/html5-boilerplate-4.3-4.0/css/main.css
+++ b/Portfolio1/html5-boilerplate-4.3-4.0/css/main.css
@@ -193,6 +193,21 @@ li {
 
 }
 
+.gallery {
+  elements: block;
+  height: 500px;
+  padding-top: 20px;
+  padding-right: 20px;
+}
+
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
 
 
 
